--- a/MegaManLofiTests/MegaManLofiTests.vcxproj
+++ b/MegaManLofiTests/MegaManLofiTests.vcxproj
@@ -43,6 +43,7 @@
     <ClInclude Include="mock_ConsoleAnimationProvider.h" />
     <ClInclude Include="mock_ConsoleSprite.h" />
     <ClInclude Include="mock_Entity.h" />
+    <ClInclude Include="mock_EntityConsoleSprite.h" />
     <ClInclude Include="mock_FrameActionRegistry.h" />
     <ClInclude Include="mock_FrameRateProvider.h" />
     <ClInclude Include="mock_Game.h" />
