--- a/MegaManLofiTests/MegaManLofiTests.vcxproj.filters
+++ b/MegaManLofiTests/MegaManLofiTests.vcxproj.filters
@@ -197,6 +197,9 @@
     <ClInclude Include="mock_EntityConsoleSpriteRepository.h">
       <Filter>Mocks</Filter>
     </ClInclude>
+    <ClInclude Include="mock_EntityConsoleSpriteCopier.h">
+      <Filter>Mocks</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Mocks">
