--- a/MegaManLofiTests/MegaManLofiTests.vcxproj
+++ b/MegaManLofiTests/MegaManLofiTests.vcxproj
@@ -57,6 +57,7 @@
     <ClInclude Include="mock_GameInputHandler.h" />
     <ClInclude Include="mock_GameInputReader.h" />
     <ClInclude Include="mock_GameRenderer.h" />
+    <ClInclude Include="mock_GameRunner.h" />
     <ClInclude Include="mock_HighResolutionClock.h" />
     <ClInclude Include="mock_Keyboard.h" />
     <ClInclude Include="mock_Menu.h" />
