--- a/MegaManLofiTests/MegaManLofiTests.vcxproj.filters
+++ b/MegaManLofiTests/MegaManLofiTests.vcxproj.filters
@@ -203,6 +203,9 @@
     <ClInclude Include="mock_GameRunner.h">
       <Filter>Mocks</Filter>
     </ClInclude>
+    <ClInclude Include="mock_ReadOnlyStage.h">
+      <Filter>Mocks</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Mocks">
