--- a/MegaManLofiTests/MegaManLofiTests.vcxproj
+++ b/MegaManLofiTests/MegaManLofiTests.vcxproj
@@ -69,6 +69,7 @@
     <ClInclude Include="mock_ReadOnlyArena.h" />
     <ClInclude Include="mock_ReadOnlyEntity.h" />
     <ClInclude Include="mock_ReadOnlyPlayer.h" />
+    <ClInclude Include="mock_ReadOnlyStage.h" />
     <ClInclude Include="mock_ScreenBuffer.h" />
     <ClInclude Include="mock_Thread.h" />
     <ClInclude Include="mock_UniqueNumberGenerator.h" />
