--- a/MegaManLofiTests/MegaManLofiTests.vcxproj
+++ b/MegaManLofiTests/MegaManLofiTests.vcxproj
@@ -71,6 +71,7 @@
     <ClInclude Include="mock_ReadOnlyPlayer.h" />
     <ClInclude Include="mock_ReadOnlyStage.h" />
     <ClInclude Include="mock_ScreenBuffer.h" />
+    <ClInclude Include="mock_Stage.h" />
     <ClInclude Include="mock_Thread.h" />
     <ClInclude Include="mock_UniqueNumberGenerator.h" />
   </ItemGroup>
@@ -103,6 +104,7 @@
     <ClCompile Include="PlayingStateInputHandlerTests.cpp" />
     <ClCompile Include="RectangleUtilitiesTests.cpp" />
     <ClCompile Include="StageStartedConsoleAnimationTests.cpp" />
+    <ClCompile Include="StageTests.cpp" />
     <ClCompile Include="TitleStateInputHandlerTests.cpp" />
     <ClCompile Include="UniqueNumberGeneratorTests.cpp" />
   </ItemGroup>
