--- a/MegaManLofi/MegaManLofi.vcxproj
+++ b/MegaManLofi/MegaManLofi.vcxproj
@@ -271,6 +271,7 @@
     <ClInclude Include="IPlayerInfoProvider.h" />
     <ClInclude Include="IRandom.h" />
     <ClInclude Include="IScreenBuffer.h" />
+    <ClInclude Include="ItemInfo.h" />
     <ClInclude Include="IThread.h" />
     <ClInclude Include="KeyboardInputDefsGenerator.h" />
     <ClInclude Include="KeyboardWrapper.h" />
@@ -301,6 +302,7 @@
     <ClInclude Include="PlayingMenuStateConsoleRenderer.h" />
     <ClInclude Include="PlayingMenuStateInputHandler.h" />
     <ClInclude Include="PointPlayerCommandArgs.h" />
+    <ClInclude Include="ProjectileInfo.h" />
     <ClInclude Include="PushPlayerCommandArgs.h" />
     <ClInclude Include="ConsolePixel.h" />
     <ClInclude Include="Player.h" />
