--- a/MegaManLofiTests/MegaManLofiTests.vcxproj.filters
+++ b/MegaManLofiTests/MegaManLofiTests.vcxproj.filters
@@ -212,6 +212,9 @@
     <ClInclude Include="mock_Stage.h">
       <Filter>Mocks</Filter>
     </ClInclude>
+    <ClInclude Include="mock_EntityPhysics.h">
+      <Filter>Mocks</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Mocks">
