--- a/MegaManLofiTests/MegaManLofiTests.vcxproj
+++ b/MegaManLofiTests/MegaManLofiTests.vcxproj
@@ -46,6 +46,7 @@
     <ClInclude Include="mock_EntityConsoleSprite.h" />
     <ClInclude Include="mock_EntityConsoleSpriteCopier.h" />
     <ClInclude Include="mock_EntityConsoleSpriteRepository.h" />
+    <ClInclude Include="mock_EntityPhysics.h" />
     <ClInclude Include="mock_FrameActionRegistry.h" />
     <ClInclude Include="mock_FrameRateProvider.h" />
     <ClInclude Include="mock_Game.h" />
