Added ConditionalInfo to MbcAsm
MbcAsm is a new namespace, meaning MBC Assembly. Eventually it should go into an entirely different project, because MBC Assembly is just a tool to compile bytecode, but for now it can live in the same project for simplicity.

--- a/MegaManLofi/MegaManLofi.vcxproj
+++ b/MegaManLofi/MegaManLofi.vcxproj
@@ -221,6 +221,7 @@
     <ClInclude Include="ArenaTileGenerator.h" />
     <ClInclude Include="ArenaPhysics.h" />
     <ClInclude Include="ArenaTile.h" />
+    <ClInclude Include="ConditionalInfo.h" />
     <ClInclude Include="ConditionOp.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="ConsoleAnimationRepository.h" />
