--- a/MegaManLofi/MegaManLofi.vcxproj.filters
+++ b/MegaManLofi/MegaManLofi.vcxproj.filters
@@ -85,6 +85,9 @@
     <Filter Include="Source Files\AI">
       <UniqueIdentifier>{9d704ba9-d5c4-489a-b1c7-f6abb01380a6}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\MbcAsm">
+      <UniqueIdentifier>{48eba8b8-1aa8-4706-9151-9ff6be92054e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MegaManLofi.cpp">
@@ -631,6 +634,9 @@
     </ClInclude>
     <ClInclude Include="ConditionOp.h">
       <Filter>Header Files\DataTypes</Filter>
+    </ClInclude>
+    <ClInclude Include="ConditionalInfo.h">
+      <Filter>Header Files\MbcAsm</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
