--- a/MegaManLofiTests/MegaManLofiTests.vcxproj
+++ b/MegaManLofiTests/MegaManLofiTests.vcxproj
@@ -105,6 +105,7 @@
     <ClCompile Include="RectangleUtilitiesTests.cpp" />
     <ClCompile Include="StageStartedConsoleAnimationTests.cpp" />
     <ClCompile Include="StageTests.cpp" />
+    <ClCompile Include="StringUtilitiesTests.cpp" />
     <ClCompile Include="TitleStateInputHandlerTests.cpp" />
     <ClCompile Include="UniqueNumberGeneratorTests.cpp" />
   </ItemGroup>
